# agente-presupuesto-telegram

./: .env.example  .gitignore  AGENT_TASKS.md  Makefile  README.md  TAREAS_AGENTE.md  bimarg_data.json  check-dependencies.ps1  clawflows_investigacion.json  config_db.json  dashboard_accuracy.json  hyperframes_story.html  new_leads.json  pyproject.toml  research_bim_ai.json
.claude/agents/: csv-validator.md  formula-auditor.md  pipeline-runner.md  rubro-fixer.md  rubro-reviewer.md  test-writer.md
docs/: PROBLEMAS_Y_DECISIONES.md  TESTS_FIX.md
empresas/_plantilla/: config.json  materiales_disponibles.json  precios_mano_obra.csv  precios_materiales.csv
empresas/estudio_ramos/: config.json  materiales_disponibles.json  precios_mano_obra.csv  precios_materiales.csv  rendimientos.csv
scripts/: correr_golden.py  nueva_empresa.py  validar_multi_empresa.py
src/: config.py
src/bot/: auth.py  formatter.py  handlers.py  main.py
src/datos/: loader.py  validador.py
src/metricas/: tokens.py
src/orquestador/: minimax_client.py  prompts.py  router.py
src/pdf/: generador.py  uploader.py
src/persistencia/: db.py  schema.sql
src/rubros/: __init__.py  base.py  categorias.py  cielorraso_durlock.py  columna_hormigon.py  contrapiso.py  cubierta_tejas.py  escalera_hormigon.py  estructura_metalica.py  fundacion.py  instalacion_electrica.py  instalacion_sanitaria.py  losa.py  mamposteria.py  membrana_impermeabilizante.py  pintura.py  piso_ceramico.py  revestimiento_banio.py  revoque_fino.py  (+3 more)
tests/: conftest.py  test_imagenes_pdf.py  test_precio_update.py  test_sesion.py
(+23 files in other folders)
